# motion-based-authentication

./: CMakeLists.txt  Main.qml  README.md  kalmanfilter.cpp  kalmanfilter.h  main.cpp  sensordatahandler.cpp  sensordatahandler.h
